--- a/templates/content.html
+++ b/templates/content.html
@@ -1,8 +1,16 @@
 {% extends "base.html" %}
+{% block title %}VPR Project Skeleton{% endblock %}
 
-{% block title %}VPR: Project Skeleton{% endblock %}
+{% block description %}This is the project skeleton that VPR uses to create flat file news apps{% endblock %}
 
 {% block content %}
-<h1>Project Skeleton</h1>
-<p>Finally, a proper project skeleton</p>
+<!-- Main component for a primary marketing message or call to action -->
+<div class="jumbotron">
+    <h1>VPR Template</h1>
+    <p>This is an example bootstrap template used to illustrate an implementation of the VPR App template.</p>
+    <p>Not all of the links on this template work.</p>
+    <p>
+        <a class="btn btn-large btn-primary" href="http://getbootstrap.com/components/#navbar">View navbar docs &raquo;</a>
+    </p>
+</div>
 {% endblock %}
