--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <title>{% block title %}Fixed Top Navbar Example for Bootstrap{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href=".{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
   </head>
