Add VPR styleguide colors to sass

--- a/_vpr/static/sass/_vpr.scss
+++ b/_vpr/static/sass/_vpr.scss
@@ -1,4 +1,10 @@
 $green: #509e2f;
+$green2: #b5bd00;
+$black: #3f4444;
+$orange: #ed8b00;
+$red: #e04e39;
+$gray: #75787b;
+$blue: #307fe2;
 $percent: 6%;
 $btn-percent: 4%;
 $tablet: 768px;
