Add underwriter styling to _vpr.scss

--- a/_vpr/static/sass/_vpr.scss
+++ b/_vpr/static/sass/_vpr.scss
@@ -78,3 +78,12 @@ button.navbar-toggle {
     border-top-color: darken($green, 10%);
 }
 
+#underwriter-nav {
+    font-size: 12px;
+    padding-left: 0;
+    margin-top: 3px;
+    li {
+        display: inline;
+    }
+}
+
