--- a/templates/content.html
+++ b/templates/content.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
-{% block title %}VPR Project Skeleton{% endblock %}
 
-{% block description %}This is the project skeleton that VPR uses to create flat file news apps{% endblock %}
+{% block title %}VPR: Project Skeleton{% endblock %}
 
 {% block content %}
-<!-- Main component for a primary marketing message or call to action -->
-<div class="jumbotron">
+<div class="jumbotron" style="margin-top: 25px;">
     <h1>VPR Template</h1>
     <p>This is an example bootstrap template used to illustrate an implementation of the VPR App template.</p>
-    <p>Not all of the links on this template work.</p>
     <p>
-        <a class="btn btn-large btn-primary" href="http://getbootstrap.com/components/#navbar">View navbar docs &raquo;</a>
+        <a class="btn btn-large btn-primary" href="https://github.com/vprnet/project-skeleton#vpr-project-skeleton">View Template Docs &raquo;</a>
     </p>
 </div>
+
+<h2 style="padding-left: 60px;">Lorem Ipsum</h2>
+<p style="padding: 10px 60px 30px; font-size: 20px; font-weight: 300;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 {% endblock %}
