--- a/static/sass/_vpr.scss
+++ b/static/sass/_vpr.scss
@@ -38,12 +38,15 @@ body {
         padding: 10px 15px 5px;
     }
     #navbar-title {
-        display: inline;
         color: darken(white, 5%);
-        font-size: 24px;
+        font-size: 22px;
+        display: inline;
         position: relative;
-        top: 2px;
+        top: 4px;
         left: 10px;
+        @media (max-width: 768px) {
+            display: none;
+        }
     }
 }
 
@@ -56,7 +59,20 @@ footer {
     padding-left: 0;
     margin-top: 3px;
     li {
-        display: inline;
+        display: inline
     }
 }
 
+#social-logos {
+    display: inline;
+    height: 40px;
+    width: 300px;
+    a {
+        float: right;
+        margin-top: 2px;
+        padding: 5px 0 5px 10px;
+        div {
+            background-size: 100%;
+        }
+    }
+}
