--- a/templates/content.html
+++ b/templates/content.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}VPR: Project Skeleton{% endblock %}
+{% block title %}VPR: App Template{% endblock %}
+{% block description %}This is the VPR app template. We use it to generate HTML locally and then push it to S3. Cheap, easy, and indestructible!{% endblock %}
+{% block scripts %}{% endblock %}
 
 {% block content %}
 <div class="jumbotron" style="margin-top: 25px;">
     <h1>VPR Template</h1>
     <p>This is an example bootstrap template used to illustrate an implementation of the VPR App template.</p>
-    <p>
-        <a class="btn btn-large btn-primary" href="https://github.com/vprnet/project-skeleton#vpr-project-skeleton">View Template Docs &raquo;</a>
-    </p>
+    <p><a class="btn btn-large btn-primary" href="https://github.com/vprnet/project-skeleton#vpr-project-skeleton">View Template Docs &raquo;</a></p>
 </div>
 
 <h2 style="padding-left: 60px;">Lorem Ipsum</h2>
