--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     <meta name="twitter:image:src" content="{{ social.img }}">
     {% endif %}
 
-    <!-- Le styles -->
+    <!-- Styles -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 
@@ -39,11 +39,10 @@
     <!--Underwriter Script -->
     <script type='text/javascript'> var googletag = googletag || {}; googletag.cmd = googletag.cmd || []; (function() { var gads = document.createElement('script'); gads.async = true; gads.type = 'text/javascript'; var useSSL = 'https:' == document.location.protocol; gads.src = (useSSL ? 'https:' : 'http:') +  '//www.googletagservices.com/tag/js/gpt.js'; var node = document.getElementsByTagName('script')[0]; node.parentNode.insertBefore(gads, node); })(); </script>
     <script type='text/javascript'> googletag.cmd.push(function() { googletag.defineSlot( '/6634685/VPR-Sitewide-UW-1-300x250', [300, 250], 'div-gpt-ad-1365016583819-0' ).addService(googletag.pubads()); googletag.pubads().enableSingleRequest(); googletag.enableServices(); }); </script>
-    <!-- end underwriter scripts -->
 
     <!-- Analytics script -->
     <script type="text/javascript">(function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = '//stream.publicbroadcasting.net/analytics/aayb.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();</script>
-    <!-- end analytics script -->
+
 </head>
 
 <body>
