--- a/templates/content.html
+++ b/templates/content.html
@@ -7,14 +7,17 @@
 
 <div class="jumbotron" style="margin-top: 25px;">
     <h1>VPR Template</h1>
-    <p>This is an example bootstrap template used to illustrate an implementation of the VPR App template.</p>
-    <p><a class="btn btn-large btn-primary" href="https://github.com/vprnet/project-skeleton#vpr-project-skeleton">View Template Docs &raquo;</a></p>
+    <p>This page was built using the VPR App Template, which is open sourced and available on <a href="https://github.com/vprnet/app-template">github</a>. Read on below to find out more about the template and how we use it for our projects.</p>
+    <p><a class="btn btn-large btn-primary" href="https://github.com/vprnet/app-template#vpr-project-skeleton">View Template Docs &raquo;</a></p>
 </div>
 
-<h2 style="padding-left: 60px;">Lorem Ipsum</h2>
+<h2 style="padding-left: 60px;">Develop in Python</h2>
 <p style="padding: 10px 60px 30px; font-size: 20px; font-weight: 300;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<h2 style="padding-left: 60px;">Hack in Flask</h2>
 <p style="padding: 10px 60px 30px; font-size: 20px; font-weight: 300;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<h2 style="padding-left: 60px;">Bootstrap? Bootstrap!</h2>
 <p style="padding: 10px 60px 30px; font-size: 20px; font-weight: 300;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<h2 style="padding-left: 60px;">Flat Files on S3: Fast, Cheap, and Resilient</h2>
 <p style="padding: 10px 60px 30px; font-size: 20px; font-weight: 300;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 {% endblock %}
 
