--- a/templates/content.html
+++ b/templates/content.html
@@ -3,6 +3,7 @@
 {% block title %}VPR: App Template{% endblock %}
 {% block description %}This is the VPR app template. We use it to generate HTML locally and then push it to S3. Cheap, easy, and indestructible!{% endblock %}
 
+{% block header_title %}VPR App Template{% endblock %}
 {% block content %}
 
 <div class="jumbotron" style="margin-top: 25px;">
