Add SVG fallback and HTML5shiv CDN

--- a/app/templates/content.html
+++ b/app/templates/content.html
@@ -23,5 +23,6 @@
 {% endblock %}
 
 {% block scripts %}
+<script src="{{ url_for('static', filename='js/svg-support.js') }}"></script>
 <!-- Jquery and bootstrap.js not included by default -->
 {% endblock %}
