--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,7 @@
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="static/js/html5shiv.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.js"></script>
     <![endif]-->
 
     <!-- Fav and touch icons -->
